example/edutelling-develop/04-ingress-edutelling-api.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: edutelling-develop
  name: ingress-edutelling-api
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 0m
spec:
  rules:
    - host: edutelling-api-develop.openshift.techgap.it
      http:
        paths:
          - path: /api
            backend:
              serviceName: edutelling-api
              servicePort: 3000
  tls:
    - hosts:
        - edutelling-api-develop.openshift.techgap.it
      secretName: tls-edutelling-api
